--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
         }
         
         function sendToWebhook(data) {
-            // Replace with your actual webhook URL
-            const webhookUrl = 'https://your-n8n-webhook-url.com/webhook/price-adjustment';
+            // Your actual webhook URL
+            const webhookUrl = 'https://n8n-movers-project-n8n.5gwahg.easypanel.host/webhook/f73c1753-3498-47c0-99a9-dceb4f594501';
             
             // Show loading state
             const submitBtn = document.getElementById('apply-btn');
